@@ -1,3 +1,8 @@
+2017-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/nasl_plugins.c (check_nvti): New function.
+	(nasl_plugin_add): Use new function.
+
 2017-10-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_smb.c (nasl_win_cmd_exec): Escape the password to not be
